# viz

./: .clangd  .gitignore  CMakeLists.txt  flake.nix  main.cpp
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
include/units/: Angle.hpp  Pose.hpp  Temperature.hpp  Vector2D.hpp  Vector3D.hpp  all.hpp  units.hpp
src/: Bezier.cpp  Bezier.h  CMakeLists.txt  ComponentCard.cpp  ComponentCard.h  DraggableEllipseItem.cpp  DraggableEllipseItem.h  Element.h  FieldView.cpp  FieldView.h  Point.cpp  Point.h  Robot.cpp  Robot.h  TimelineWidget.cpp  TimelineWidget.h  main.cpp  utils.h
src/geometry/: Bezier.h  Curve.h
